Fix for consultant type buttons to wrap on small screens

--- a/src/styles/components/consultantType.module.scss
+++ b/src/styles/components/consultantType.module.scss
@@ -1,5 +1,10 @@
 @import '../mixins';
 
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+};
+
 .button {
   @include button-primary;
 
